Bug 450000 - onlyoffice, zapzap, and gitahead don't launch (Wayland) or launch broken (X11) from Overview effect
Summary: onlyoffice, zapzap, and gitahead don't launch (Wayland) or launch broken (X11...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: 5.24.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-11 10:27 UTC by Marko Gobin
Modified: 2022-02-15 19:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.1
Sentry Crash Report:


Attachments
kwin_x11_onlyoffice_log (463.77 KB, image/png)
2022-02-11 10:27 UTC, Marko Gobin
Details
onlyoffice broken on x11 (463.77 KB, image/png)
2022-02-11 10:27 UTC, Marko Gobin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marko Gobin 2022-02-11 10:27:25 UTC
Created attachment 146575 [details]
kwin_x11_onlyoffice_log

SUMMARY
Some apps launch broken on x11 or don't launch on wayland. If they are launched from krunner or application launcher they are working normally.

STEPS TO REPRODUCE
1. Install Onlyoffice (flatpak, appimage, native)
2. Launch it from overview effect

OBSERVED RESULT
1. On x11 app launches broken and needs to be force closed
2. On Wayland apps doesn't launch at all 

EXPECTED RESULT
App launches normally and fully working.

SOFTWARE/OS VERSIONS
Linux: Arch
KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
There are some log errors in kwin which I attached.
Issue also occures with https://github.com/rafatosta/zapzap
Comment 1 Marko Gobin 2022-02-11 10:27:47 UTC
Created attachment 146576 [details]
onlyoffice broken on x11
Comment 2 Vlad Zahorodnii 2022-02-11 10:49:44 UTC
Does this happen with KDE or GTK apps?
Comment 3 Marko Gobin 2022-02-11 11:02:19 UTC
I went through apps that I have installed and this happens with onlyoffice, zapzap and gitahead.
I think they are all electron apps.
Comment 4 Vlad Zahorodnii 2022-02-11 11:15:43 UTC
Can confirm, however other electron apps work fine, e.g. spotify. Not sure why onlyoffice refuses to start.
Comment 5 Marko Gobin 2022-02-11 21:47:40 UTC
Same thing happens when command is executed using overview effect: /usr/bin/desktopeditors.
However if is command is executed as currently logged user with "sudo -u $USER /usr/bin/desktopeditors" it works as it should.

Could it be that overview effect is executing command as wrong user?
Comment 6 Nate Graham 2022-02-11 21:48:48 UTC
Is launching those apps also broken using standalone KRunner? Or only when launched from the Overview effect?
Comment 7 Marko Gobin 2022-02-11 21:49:41 UTC
Only when launching using overview effect.
Comment 8 Nate Graham 2022-02-11 21:50:17 UTC
Thanks. How strange.
Comment 9 Nicolas Fella 2022-02-11 22:11:59 UTC
it looks like onlyoffice is crashing right after launch:

Feb 11 23:10:19 madeye systemd-coredump[3143]: [🡕] Process 3141 (DesktopEditors) of user 1000 dumped core.
Stack trace of thread 2:
                                               #0  0x00007f76c0a6a7f5 n/a (/usr/lib/x86_64-linux-gnu/libc-2.31.so + 0x397f5)
                                               #1  0x00007f76c0efcc71 n/a (/app/bin/opt/onlyoffice/desktopeditors/libQt5Core.so.5 + 0x2dec71)
Comment 10 Nicolas Fella 2022-02-11 22:16:33 UTC
same for zapzap:

Stack trace of thread 2:
                                               #0  0x00007fba175d24bb n/a (/usr/lib/x86_64-linux-gnu/libc-2.33.so + 0x394bb)
                                               #1  0x00007fba175bb867 n/a (/usr/lib/x86_64-linux-gnu/libc-2.33.so + 0x22867)
                                               #2  0x00007fba167ccaa9 n/a (/usr/lib/x86_64-linux-gnu/libQt6Core.so.6.2.3 + 0xacaa9)
                                               #3  0x00007fba12c161e9 n/a (/usr/lib/x86_64-linux-gnu/libQt6Gui.so.6.2.3 + 0x12b1e9)
                                               #4  0x00007fba12ce08fe n/a (/usr/lib/x86_64-linux-gnu/libQt6Gui.so.6.2.3 + 0x1f58fe)
                                               #5  0x00007fba12ce1710 n/a (/usr/lib/x86_64-linux-gnu/libQt6Gui.so.6.2.3 + 0x1f6710)
                                               #6  0x00007fba168985d9 n/a (/usr/lib/x86_64-linux-gnu/libQt6Core.so.6.2.3 + 0x1785d9)
                                               #7  0x00007fba12ce332e n/a (/usr/lib/x86_64-linux-gnu/libQt6Gui.so.6.2.3 + 0x1f832e)
                                               #8  0x00007fba13539ba6 n/a (/usr/lib/x86_64-linux-gnu/libQt6Widgets.so.6.2.3 + 0x198ba6)
                                               #9  0x00007fba13ead182 n/a (n/a + 0x0)
                                               #10 0x00007fba13eb0988 n/a (n/a + 0x0)
                                               #11 0x00007fba140fa1a1 n/a (/app/lib/python3.9/site-packages/PyQt6/sip.cpython-39-x86_64-linux-gnu.so + 0x191a1)
                                               #12 0x00007fba177e4181 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x7c181)
                                               #13 0x00007fba178b894a n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x15094a)
                                               #14 0x00007fba177db3dc n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x733dc)
                                               #15 0x00007fba179a77b7 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x23f7b7)
                                               #16 0x00007fba179ab1fd n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x2431fd)
                                               #17 0x00007fba178adf3a n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x145f3a)
                                               #18 0x00007fba178ae252 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x146252)
                                               #19 0x00007fba178f15c4 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x1895c4)
                                               #20 0x00007fba17899f93 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x131f93)
                                               #21 0x00007fba178add65 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x145d65)
                                               #22 0x00007fba177ddd06 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x75d06)
                                               #23 0x00007fba177e0cb4 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x78cb4)
                                               #24 0x00007fba177dd20a n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x7520a)
                                               #25 0x00007fba179a77b7 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x23f7b7)
                                               #26 0x00007fba179a7bb1 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x23fbb1)
                                               #27 0x00007fba179a7bfe n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x23fbfe)
                                               #28 0x00007fba179a7c33 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x23fc33)
                                               #29 0x00007fba179a8424 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x240424)
                                               #30 0x00007fba179a851c n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x24051c)
                                               #31 0x00007fba179a8e7d n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x240e7d)
                                               #32 0x00007fba179a913e n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x24113e)
                                               #33 0x00007fba179aa039 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x242039)
                                               #34 0x00007fba179aedd6 n/a (/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0 + 0x246dd6)
                                               #35 0x00007fba175bcb90 n/a (/usr/lib/x86_64-linux-gnu/libc-2.33.so + 0x23b90)
                                               #36 0x00005575875a409e n/a (/usr/bin/python3.9 + 0x109e)
Comment 11 Nicolas Fella 2022-02-11 22:19:08 UTC
Same for gitahead.

Note that non of those use Electron, actually all three of them use Qt
Comment 12 Nicolas Fella 2022-02-11 22:36:35 UTC
> Could it be that overview effect is executing command as wrong user?

Running "kdialog --sorry $(whoami)" from the overview shows the correct user for me, so I don't think this is it
Comment 13 Bug Janitor Service 2022-02-11 23:47:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2003
Comment 14 Vlad Zahorodnii 2022-02-12 14:12:03 UTC
Git commit 77ec43d5e15a8b8ad8e1824ebf49d7d3cbf015c5 by Vlad Zahorodnii, on behalf of Nicolas Fella.
Committed on 12/02/2022 at 13:57.
Pushed by vladz into branch 'master'.

Don't force QT_QPA_PLATFORM=wayland

We're setting this env variable because earlier we used it to force kwin to use its special QPA so we need to change that back to something sensible.

However setting it to Wayland breaks apps that ship their own Qt with missing or broken Wayland support.

Set it to be empty instead. Well-behaved Qt apps will use Wayland regardless because of XDG_SESSION_TYPE.

M  +2    -2    src/main_wayland.cpp

https://invent.kde.org/plasma/kwin/commit/77ec43d5e15a8b8ad8e1824ebf49d7d3cbf015c5
Comment 15 Vlad Zahorodnii 2022-02-12 14:16:25 UTC
Git commit f05a7c0e51c452b3850cb9e21d5b92701526366e by Vlad Zahorodnii, on behalf of Nicolas Fella.
Committed on 12/02/2022 at 14:16.
Pushed by vladz into branch 'Plasma/5.24'.

Don't force QT_QPA_PLATFORM=wayland

We're setting this env variable because earlier we used it to force kwin to use its special QPA so we need to change that back to something sensible.

However setting it to Wayland breaks apps that ship their own Qt with missing or broken Wayland support.

Set it to be empty instead. Well-behaved Qt apps will use Wayland regardless because of XDG_SESSION_TYPE.


(cherry picked from commit 77ec43d5e15a8b8ad8e1824ebf49d7d3cbf015c5)

M  +2    -2    src/main_wayland.cpp

https://invent.kde.org/plasma/kwin/commit/f05a7c0e51c452b3850cb9e21d5b92701526366e